deployment/js-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: js-server
  name: js-server
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: js-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: js-server
    spec:
      containers:
        - image: gcr.io/main-composite-344506/javascript
          imagePullPolicy: IfNotPresent
          name: js-image
          volumeMounts:
          - mountPath: /mnt/fileserver
            name: mypvc
      volumes:
      - name: mypvc
        persistentVolumeClaim:
          claimName: nfs
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: js-server-nodeport-service
  namespace: default
spec:
  selector:
    app: js-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
