deployment/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "cogteach-static-ip"
    # replace the ip name with the one you created
    networking.gke.io/managed-certificates: managed-cert
    # replace the managed certificate name with the one you created
    kubernetes.io/ingress.class: "gce"
    # http to https redirect. See https://github.com/kubernetes/ingress-gce/issues/1075#issuecomment-699556931.
    networking.gke.io/v1beta1.FrontendConfig: my-frontend-config
spec:
  defaultBackend:
    service:
      name: js-server-nodeport-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: js-dedicated-server-nodeport-service
            port:
              number: 80
      - path: /createUsers
        pathType: Prefix
        backend:
          service:
            name: js-dedicated-server-nodeport-service
            port:
              number: 80
      - path: /admin.html
        pathType: ImplementationSpecific
        backend:
          service:
            name: js-dedicated-server-nodeport-service
            port:
              number: 80
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: js-dedicated-server-nodeport-service
            port:
              number: 80
      - path: /service
        pathType: Prefix
        backend:
          service:
            name: py-server-nodeport-service
            port:
              number: 80
      - path: /internal
        pathType: Prefix
        backend:
          service:
            name: py-dedicated-server-nodeport-service
            port:
              number: 80
      - path: /workshop
        pathType: Prefix
        backend:
          service:
            name: py-dedicated-server-nodeport-service
            port:
              number: 80
